--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: cpp
 dist: bionic
-compiler:
-  - gcc
+#compiler:
+#  - gcc
 
 before_script:
   # create a build folder for the out-of-source build
@@ -18,7 +18,12 @@ script:
   # if the project uses ctest we can run the tests like this
   # - make tests
   
-  
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-9
 
 
       
