--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: cpp
-dist: bionic
+dist: xenial
 #compiler:
 #  - gcc
 
@@ -23,6 +23,7 @@ addons:
     sources:
     - ubuntu-toolchain-r-test
     packages:
+    - gcc-9
     - g++-9
 
 install:
