--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: cpp
 dist: xenial
-#compiler:
-#  - gcc
+compiler:
+  - gcc
 
 before_script:
   # create a build folder for the out-of-source build
