--- a/.travis.yml
+++ b/.travis.yml
@@ -18,11 +18,11 @@ script:
   # if the project uses ctest we can run the tests like this
   # - make tests
   - if [[ "${TRAVIS_OS_NAME}" == "linux" ]]; then
-  -    make gcov
-  -    make lcov
-  -    bash <(curl -s https://codecov.io/bash) -X gcov || echo "Codecov did not collect coverage reports"
-  - fi
-  
+    make gcov
+    make lcov
+    bash <(curl -s https://codecov.io/bash) -X gcov || echo "Codecov did not collect coverage reports"
+  fi
+
 addons:
   apt:
     sources:
@@ -33,6 +33,3 @@ addons:
 
 install:
 - if [ "$CXX" = "g++" ]; then export CXX="g++-9" CC="gcc-9"; fi
-
-
-      
