--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_script:
   - cd build
   # run cmake; here we assume that the project's
   # top-level CMakeLists.txt is located at '..'
-  - cmake ..
+  - cmake .. -DENABLE_COVERAGE=True
 
 script:
   # once CMake has done its job we just build using make as usual
