--- a/.travis.yml
+++ b/.travis.yml
@@ -17,11 +17,9 @@ script:
   - make
   # if the project uses ctest we can run the tests like this
   # - make tests
-  - if [[ "${TRAVIS_OS_NAME}" == "linux" ]]; then
-      make gcov
-      make lcov
-      bash <(curl -s https://codecov.io/bash) -X gcov || echo "Codecov failed"
-    fi
+  - make gcov
+  - make lcov
+  - bash <(curl -s https://codecov.io/bash) -X gcov || echo "Codecov failed"
 
 addons:
   apt:
