--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ script:
   - make
   # if the project uses ctest we can run the tests like this
   # - make tests
-  - make gcov
+  # - make gcov
   # lcov is not supporting gcc9 gnco atm
   # - make lcov
   - bash <(curl -s https://codecov.io/bash) -X gcov || echo "Codecov failed"
